// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apps/Punch Card App Large Mobile 1`] = `
<div
  className="ms-Stack css-105"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-72"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-73"
    >
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__165"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel164"
              className="ms-TextField-field field-77"
              id="TextField162"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__172"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel171"
              className="ms-TextField-field field-77"
              id="TextField169"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-98"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-99"
    >
      <span
        className="css-72"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-101"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-102"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-103"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App Small Mobile 1`] = `
<div
  className="ms-Stack css-105"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-72"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-73"
    >
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__151"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel150"
              className="ms-TextField-field field-77"
              id="TextField148"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__158"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel157"
              className="ms-TextField-field field-77"
              id="TextField155"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-98"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-99"
    >
      <span
        className="css-72"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-101"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-102"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-103"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App With Items 1 1`] = `
<div
  className="ms-Stack css-105"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-72"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-73"
    >
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__193"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel192"
              className="ms-TextField-field field-77"
              id="TextField190"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__200"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel199"
              className="ms-TextField-field field-77"
              id="TextField197"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-98"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-99"
    >
      <span
        className="css-72"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-101"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-102"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-103"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App With Items 2 1`] = `
<div
  className="ms-Stack css-105"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-72"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-73"
    >
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__207"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel206"
              className="ms-TextField-field field-77"
              id="TextField204"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__214"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel213"
              className="ms-TextField-field field-77"
              id="TextField211"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    className="ms-ProgressIndicator root-98"
  >
    <div
      className="ms-ProgressIndicator-itemName itemName-99"
    >
      <span
        className="css-72"
      >
        ⏳Punched
      </span>
    </div>
    <div
      className="ms-ProgressIndicator-itemProgress itemProgress-101"
    >
      <div
        className="ms-ProgressIndicator-progressTrack progressTrack-102"
      />
      <div
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={20}
        className="ms-ProgressIndicator-progressBar progressBar-103"
        role="progressbar"
        style={
          Object {
            "transition": undefined,
            "width": "20%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card App Without Items 1`] = `
<div
  className="ms-Stack css-105"
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="css-72"
    >
      🎯Goal For The Day
    </span>
    <div
      className="ms-Stack css-73"
    >
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Hours
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__179"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel178"
              className="ms-TextField-field field-77"
              id="TextField176"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="08"
            />
          </div>
        </div>
      </div>
      <div
        className="ms-TextField textField-75"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-Stack css-86"
          >
            <label
              className="ms-Label root-87"
            >
              Minutes
            </label>
            <button
              className="ms-Button ms-Button--icon root-88"
              data-is-focusable={true}
              id="id__186"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              title="Info"
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Info"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            className="ms-TextField-fieldGroup fieldGroup-76"
          >
            <input
              aria-invalid={false}
              aria-labelledby="TextFieldLabel185"
              className="ms-TextField-field field-77"
              id="TextField183"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onPaste={[Function]}
              type="text"
              value="30"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Apps/Time Tool App 1`] = `
<div>
  <div
    className="ms-Grid"
    dir="ltr"
  >
    <div
      className="ms-Grid-col ms-lg2 ms-xl4"
    />
    <div
      className=" ms-Grid-col ms-sm12 ms-lg8 ms-xl4 ms-depth-16 ms-bgColor-gray10 "
    >
      <div
        className="ms-Stack css-108"
      >
        <span
          className="css-109"
        >
          Time Tool
        </span>
        <span
          className="css-110"
        >
          1. Convert date & time for any timezone into a timestamp.
        </span>
        <div
          className="ms-Stack css-105"
        >
          <div
            className="ms-Stack css-69"
          >
            <div
              className="ms-StackItem css-106"
            >
              <div
                className="ms-DatePicker root-111"
              >
                <div
                  aria-haspopup="true"
                >
                  <div
                    className="ms-TextField textField-115"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <label
                        className="ms-Label root-87"
                        htmlFor="DatePicker218-label"
                        id="TextFieldLabel222"
                      >
                        Date
                      </label>
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-76"
                      >
                        <input
                          aria-expanded={false}
                          aria-invalid={false}
                          aria-labelledby="TextFieldLabel222"
                          className="ms-TextField-field field-116"
                          id="DatePicker218-label"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          onKeyDown={[Function]}
                          readOnly={true}
                          required={false}
                          role="combobox"
                          type="text"
                          value="Tue Dec 01 2020"
                        />
                        <i
                          aria-hidden={true}
                          className="ms-DatePicker-event--with-label msDatePickerDisabled icon-118"
                          data-icon-name="Calendar"
                          onClick={[Function]}
                        >
                          
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-106"
            >
              <div
                className="ms-TextField root-89"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-87"
                    htmlFor="TextField223"
                    id="TextFieldLabel225"
                  >
                    Time
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-76"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel225"
                      className="ms-TextField-field field-116"
                      id="TextField223"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      onPaste={[Function]}
                      type="text"
                      value="16:29"
                    />
                    <i
                      aria-hidden={true}
                      className="icon-120"
                      data-icon-name="Clock"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-105"
          >
            <div
              className="ms-StackItem css-106"
            >
              <div
                className="ms-Dropdown-container"
              >
                <label
                  className="ms-Label ms-Dropdown-label root-137"
                  id="Dropdown226-label"
                >
                  Timezone
                </label>
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="Dropdown226-label Dropdown226-option"
                  className="ms-Dropdown dropdown-121"
                  data-is-focusable={true}
                  id="Dropdown226"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="listbox"
                  tabIndex={0}
                >
                  <span
                    aria-atomic={true}
                    aria-invalid={false}
                    aria-live="polite"
                    aria-posinset={252}
                    aria-selected={true}
                    aria-setsize={594}
                    className="ms-Dropdown-title title-148"
                    id="Dropdown226-option"
                    role="option"
                  >
                    Asia/Calcutta
                  </span>
                  <span
                    className="ms-Dropdown-caretDownWrapper caretDownWrapper-123"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Dropdown-caretDown caretDown-138"
                      data-icon-name="ChevronDown"
                    >
                      
                    </i>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-106"
            >
              <div
                className="ms-Checkbox is-enabled root-139"
              >
                <input
                  aria-checked="false"
                  aria-label="Is end of time?"
                  checked={false}
                  className="input-140"
                  id="checkbox-227"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="ms-Checkbox-label label-141"
                  htmlFor="checkbox-227"
                >
                  <div
                    className="ms-Checkbox-checkbox checkbox-142"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Checkbox-checkmark checkmark-145"
                      data-icon-name="CheckMark"
                    >
                      
                    </i>
                  </div>
                  <span
                    aria-hidden="true"
                    className="ms-Checkbox-text text-144"
                  >
                    Is end of time?
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Stack css-146"
        >
          <div
            className="ms-StackItem css-106"
          >
            <div
              className="ms-TextField root-89"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-86"
                >
                  <label
                    className="ms-Label root-87"
                  >
                    Timestamp
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-88"
                    data-is-focusable={true}
                    id="id__231"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-63"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-76"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel230"
                    className="ms-TextField-field field-116"
                    id="TextField228"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    readOnly={true}
                    style={
                      Object {
                        "border": "2px lightgray dashed",
                      }
                    }
                    type="text"
                    value="1606820340000"
                  />
                  <i
                    aria-hidden={true}
                    className="icon-120"
                    data-icon-name="Copy"
                  >
                    
                  </i>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-StackItem css-106"
          >
            <button
              className="ms-Button ms-Button--default root-62"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-63"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                  data-icon-name="Trash"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
                <span
                  className="ms-Button-textContainer textContainer-64"
                >
                  <span
                    className="ms-Button-label label-66"
                    id="id__235"
                  >
                    Clear Local Storage
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          className="ms-StackItem css-106"
        >
          <span
            className="css-110"
          >
            2. Convert a timestamp to date in the time-zone selected above.
          </span>
        </div>
        <div
          className="ms-StackItem css-106"
        >
          <div
            className="ms-TextField root-89"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-Stack css-86"
              >
                <label
                  className="ms-Label root-87"
                >
                  Paste a timestamp
                </label>
                <button
                  className="ms-Button ms-Button--icon root-88"
                  data-is-focusable={true}
                  id="id__241"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  title="Info"
                  type="button"
                >
                  <span
                    className="ms-Button-flexContainer flexContainer-63"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                      data-icon-name="Info"
                      role="presentation"
                      style={
                        Object {
                          "fontFamily": "\\"FabricMDL2Icons\\"",
                        }
                      }
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
              <div
                className="ms-TextField-fieldGroup fieldGroup-76"
              >
                <input
                  aria-describedby="TextFieldDescription239"
                  aria-invalid={false}
                  className="ms-TextField-field field-77"
                  id="TextField238"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Try a timestamp..."
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription239"
            >
              <span
                className="css-147"
              >
                Thu Jan 01 1970 05:30:00 GMT+0530 (Asia/Calcutta)
              </span>
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="ms-Grid-col ms-lg2 ms-xl4"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons/Add Scheduled Slot Small Mobile 1`] = `
<button
  className="ms-Button ms-Button--default root-62"
  data-is-focusable={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="ms-Button-flexContainer flexContainer-63"
    data-automationid="splitbuttonprimary"
  >
    <i
      aria-hidden={true}
      className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
      data-icon-name="Add"
      role="presentation"
      style={
        Object {
          "fontFamily": "\\"FabricMDL2Icons\\"",
        }
      }
    >
      
    </i>
    <span
      className="ms-Button-textContainer textContainer-64"
    >
      <span
        className="ms-Button-label label-66"
        id="id__8"
      >
        Add Scheduled Slot
      </span>
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-86"
>
  <label
    className="ms-Label root-87"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-88"
    data-is-focusable={true}
    id="id__249"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-86"
>
  <label
    className="ms-Label root-87"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-88"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch Card Buttons Large Mobile 1`] = `
<div
  className="ms-Stack css-69"
>
  <button
    className="ms-Button ms-Button--primary root-70"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__20"
        >
          😇Start Your Day
        </span>
      </span>
    </span>
  </button>
  <button
    className="ms-Button ms-Button--default ms-hiddenSm root-62"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Add"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__23"
        >
          Add Scheduled Slot
        </span>
      </span>
    </span>
  </button>
  <button
    className="ms-Button ms-Button--icon ms-hiddenMdUp root-71"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Add"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch Card Buttons Small Mobile 1`] = `
<div
  className="ms-Stack css-69"
>
  <button
    className="ms-Button ms-Button--primary root-70"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__11"
        >
          😇Start Your Day
        </span>
      </span>
    </span>
  </button>
  <button
    className="ms-Button ms-Button--default ms-hiddenSm root-62"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Add"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__14"
        >
          Add Scheduled Slot
        </span>
      </span>
    </span>
  </button>
  <button
    className="ms-Button ms-Button--icon ms-hiddenMdUp root-71"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
        data-icon-name="Add"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch In Button Small Mobile 1`] = `
<button
  className="ms-Button ms-Button--primary root-70"
  data-is-focusable={true}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <span
    className="ms-Button-flexContainer flexContainer-63"
    data-automationid="splitbuttonprimary"
  >
    <span
      className="ms-Button-textContainer textContainer-64"
    >
      <span
        className="ms-Button-label label-66"
        id="id__93"
      >
        Punch In
      </span>
    </span>
  </span>
</button>
`;

exports[`Storyshots Components/Punch-In-Time-Cell Desktop 1`] = `
<div
  className="ms-TooltipHost root-94"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-89"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-76"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-77"
          id="TextField101"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 16:29"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-In-Time-Cell Small Mobile 1`] = `
<div
  className="ms-TooltipHost root-94"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-89"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-76"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-77"
          id="TextField97"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 16:29"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Desktop 1`] = `
<div
  className="ms-Stack css-95"
>
  <button
    className="ms-Button ms-Button--primary root-70"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-97 ms-Button-icon primaryButton0Icon-96 primaryButton0Icon-41"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__111"
        >
          Punch Out
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Small Mobile With Value 1`] = `
<div
  className="ms-TooltipHost root-94"
  onBlurCapture={[Function]}
  onFocusCapture={[Function]}
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="ms-TextField root-89"
  >
    <div
      className="ms-TextField-wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup-76"
      >
        <input
          aria-invalid={false}
          className="ms-TextField-field field-77"
          id="TextField108"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onPaste={[Function]}
          type="text"
          value="2020-12-01 16:29"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch-Out-Time-Cell Small Mobile Without Value 1`] = `
<div
  className="ms-Stack css-95"
>
  <button
    className="ms-Button ms-Button--primary root-70"
    data-is-focusable={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-63"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-97 ms-Button-icon primaryButton0Icon-96 primaryButton0Icon-41"
        data-icon-name="Leave"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons-15\\"",
          }
        }
      >
        
      </i>
      <span
        className="ms-Button-textContainer textContainer-64"
      >
        <span
          className="ms-Button-label label-66"
          id="id__104"
        >
          Punch Out
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punched Progress Small Mobile 1`] = `
<div
  className="ms-ProgressIndicator root-98"
>
  <div
    className="ms-ProgressIndicator-itemName itemName-99"
  >
    <span
      className="css-72"
    >
      ⏳Punched
    </span>
  </div>
  <div
    className="ms-ProgressIndicator-itemProgress itemProgress-101"
  >
    <div
      className="ms-ProgressIndicator-progressTrack progressTrack-102"
    />
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="ms-ProgressIndicator-progressBar progressBar-103"
      role="progressbar"
      style={
        Object {
          "transition": undefined,
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Components/Simple Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-69"
  >
    <div
      className="ms-TextField root-89"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-77"
            id="TextField253"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--icon ms-hiddenMdUp root-71"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      className="ms-Button ms-Button--primary ms-hiddenSm root-70"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__259"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Goal For The Day Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="css-72"
  >
    🎯Goal For The Day
  </span>
  <div
    className="ms-Stack css-73"
  >
    <div
      className="ms-TextField textField-75"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-86"
        >
          <label
            className="ms-Label root-87"
          >
            Hours
          </label>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            id="id__46"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel45"
            className="ms-TextField-field field-77"
            id="TextField43"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="09"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-TextField textField-75"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-86"
        >
          <label
            className="ms-Label root-87"
          >
            Minutes
          </label>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            id="id__53"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel52"
            className="ms-TextField-field field-77"
            id="TextField50"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="00"
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Forms/Goal For The Day Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <span
    className="css-72"
  >
    🎯Goal For The Day
  </span>
  <div
    className="ms-Stack css-73"
  >
    <div
      className="ms-TextField textField-75"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-86"
        >
          <label
            className="ms-Label root-87"
          >
            Hours
          </label>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            id="id__32"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel31"
            className="ms-TextField-field field-77"
            id="TextField29"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="09"
          />
        </div>
      </div>
    </div>
    <div
      className="ms-TextField textField-75"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-Stack css-86"
        >
          <label
            className="ms-Label root-87"
          >
            Minutes
          </label>
          <button
            className="ms-Button ms-Button--icon root-88"
            data-is-focusable={true}
            id="id__39"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Info"
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-63"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                data-icon-name="Info"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            aria-labelledby="TextFieldLabel38"
            className="ms-TextField-field field-77"
            id="TextField36"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            type="text"
            value="00"
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-69"
  >
    <div
      className="ms-TextField root-89"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-77"
            id="TextField84"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-90"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-93"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__90"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Large Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-69"
  >
    <div
      className="ms-TextField root-89"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-77"
            id="TextField66"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-90"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-93"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__72"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-69"
  >
    <div
      className="ms-TextField root-89"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-77"
            id="TextField57"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-90"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-93"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__63"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/New Punch Card Form Tablet 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-69"
  >
    <div
      className="ms-TextField root-89"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-76"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-77"
            id="TextField75"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-90"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      aria-disabled={true}
      className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-93"
      data-is-focusable={false}
      disabled={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-91"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__81"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Scheduled Slot Form Desktop 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-105"
  >
    <div
      className="ms-StackItem css-106"
    >
      <div
        className="ms-Stack css-73"
      >
        <div
          className="ms-TextField is-required textField-107"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-86"
            >
              <label
                className="ms-Label root-87"
              >
                Start Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-88"
                data-is-focusable={true}
                id="id__134"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-76"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel133"
                className="ms-TextField-field field-77"
                id="TextField131"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 17:00"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField is-required textField-107"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-86"
            >
              <label
                className="ms-Label root-87"
              >
                End Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-88"
                data-is-focusable={true}
                id="id__141"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-76"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel140"
                className="ms-TextField-field field-77"
                id="TextField138"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 18:00"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--primary root-70"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__145"
          >
            Add Slot
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots Forms/Scheduled Slot Form Small Mobile 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-105"
  >
    <div
      className="ms-StackItem css-106"
    >
      <div
        className="ms-Stack css-73"
      >
        <div
          className="ms-TextField is-required textField-107"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-86"
            >
              <label
                className="ms-Label root-87"
              >
                Start Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-88"
                data-is-focusable={true}
                id="id__117"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-76"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel116"
                className="ms-TextField-field field-77"
                id="TextField114"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 17:00"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField is-required textField-107"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-86"
            >
              <label
                className="ms-Label root-87"
              >
                End Time *
              </label>
              <button
                className="ms-Button ms-Button--icon root-88"
                data-is-focusable={true}
                id="id__124"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-63"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-76"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel123"
                className="ms-TextField-field field-77"
                id="TextField121"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onPaste={[Function]}
                required={true}
                type="text"
                value="2020-12-01 18:00"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--primary root-70"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-63"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-68 ms-Button-icon icon-65"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-64"
        >
          <span
            className="ms-Button-label label-66"
            id="id__128"
          >
            Add Slot
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-43"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-51 ms-Pivot root-44"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-52"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-60"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-53"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-48"
          >
            <span
              className="ms-Pivot-text text-49"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-45"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-43"
        >
          <span
            className="css-61"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tables/Punched Slots Desktop 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Large Mobile 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Small Mobile 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Template 1`] = `null`;

exports[`Storyshots Tables/Punched Slots With Items 1 1`] = `null`;

exports[`Storyshots Tables/Punched Slots With Items 2 1`] = `null`;

exports[`Storyshots Tables/Punched Slots Without Items 1`] = `null`;
